Small changes to avoid the Email null breakpoint Default email set and is no longer unique...